# rust_study

./: Cargo.toml
simple_short_link/: .env  Cargo.toml
simple_short_link/sql/: url.sql
simple_short_link/src/: config.rs  core.rs  error.rs  main.rs  model.rs  tmpl.rs
simple_short_link/src/db/: mod.rs  url.rs
simple_short_link/src/handler/: mod.rs  url.rs
simple_short_link/templates/: base.html  index.html  msg.html  rank.html
simple_todo/: .env  Cargo.toml
simple_todo/sql/: init.sql
simple_todo/src/: config.rs  db.rs  error.rs  handler.rs  main.rs  model.rs  response.rs
simple_todo/src/db/: mod.rs  todo_item.rs  todo_list.rs
simple_todo/src/handler/: mod.rs  todo_item.rs  todo_list.rs
yameizitd_simple_blog/: .env  Cargo.toml
yameizitd_simple_blog/scripts/: function.sql
yameizitd_simple_blog/src/: main.rs
yameizitd_simple_blog/src/config/: mod.rs
yameizitd_simple_blog/src/db/: category.rs  mod.rs  post.rs
yameizitd_simple_blog/src/error/: db_error.rs  mod.rs
yameizitd_simple_blog/src/form/: category.rs  mod.rs  page.rs  post.rs
yameizitd_simple_blog/src/model/: category.rs  post.rs
