[package]
name = "simple_short_link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
murmur3 = "0.5"
axum = { version="0.6", features = ["tokio"] }
tokio = { version="1", features = ["full"] }
serde = { version="1", features = ["derive"] }
dotenv = "0.15"
config = "0.13"
deadpool-postgres = { version = "0.10", features = ["serde"] }
tokio-postgres = "0.7"
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
askama = "0.12"
tower-http = { version = "0.4", features = ["full"] }
anyhow = "1"