[package]
name = "simple_todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version="1", features = ["full"] }
serde = { version="1", features = ["derive"] }
dotenv = "0.15"
config = "0.13"
deadpool-postgres = { version = "0.10", features = ["serde"] }
tokio-postgres = "0.7"
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"